[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "catebi_telegram_logger"
version = "0.1.0"
dependencies = [
    "pydantic==2.13.3",
]
requires-python = ">= 3.10"
authors = [
  {name = "Maria Akhaladze", email = "axaladzemaria@gmail.com"},
  {name = "Egor Terentev", email = "kfearsoff@gmail.com"}
]
readme = "README.md"
license = "MIT"

[project.urls]
Repository = "https://github.com/catebi/catebi-telegram-logger"

[tool.setuptools.packages.find]
where = ["src"]